import typia from "typia";

interface IPointer<T> {
  value: T;
}

// MESSAGE
typia.protobuf.message<IPointer<Date>>();
typia.protobuf.message<IPointer<Boolean>>();
typia.protobuf.message<IPointer<BigInt>>();
typia.protobuf.message<IPointer<Number>>();
typia.protobuf.message<IPointer<String>>();
typia.protobuf.message<IPointer<Uint8ClampedArray>>();
typia.protobuf.message<IPointer<Uint16Array>>();
typia.protobuf.message<IPointer<Uint32Array>>();
typia.protobuf.message<IPointer<BigUint64Array>>();
typia.protobuf.message<IPointer<Int8Array>>();
typia.protobuf.message<IPointer<Int16Array>>();
typia.protobuf.message<IPointer<Int32Array>>();
typia.protobuf.message<IPointer<BigInt64Array>>();
typia.protobuf.message<IPointer<Float32Array>>();
typia.protobuf.message<IPointer<Float64Array>>();
typia.protobuf.message<IPointer<Float32Array>>();
typia.protobuf.message<IPointer<Float64Array>>();
typia.protobuf.message<IPointer<DataView>>();
typia.protobuf.message<IPointer<ArrayBuffer>>();
typia.protobuf.message<IPointer<SharedArrayBuffer>>();
typia.protobuf.message<IPointer<WeakSet<IPointer<number>>>>();
typia.protobuf.message<IPointer<WeakMap<IPointer<number>, string>>>();

// DECODE
typia.protobuf.createDecode<IPointer<Date>>();
typia.protobuf.createDecode<IPointer<Boolean>>();
typia.protobuf.createDecode<IPointer<BigInt>>();
typia.protobuf.createDecode<IPointer<Number>>();
typia.protobuf.createDecode<IPointer<String>>();
typia.protobuf.createDecode<IPointer<Uint8ClampedArray>>();
typia.protobuf.createDecode<IPointer<Uint16Array>>();
typia.protobuf.createDecode<IPointer<Uint32Array>>();
typia.protobuf.createDecode<IPointer<BigUint64Array>>();
typia.protobuf.createDecode<IPointer<Int8Array>>();
typia.protobuf.createDecode<IPointer<Int16Array>>();
typia.protobuf.createDecode<IPointer<Int32Array>>();
typia.protobuf.createDecode<IPointer<BigInt64Array>>();
typia.protobuf.createDecode<IPointer<Float32Array>>();
typia.protobuf.createDecode<IPointer<Float64Array>>();
typia.protobuf.createDecode<IPointer<Float32Array>>();
typia.protobuf.createDecode<IPointer<Float64Array>>();
typia.protobuf.createDecode<IPointer<DataView>>();
typia.protobuf.createDecode<IPointer<ArrayBuffer>>();
typia.protobuf.createDecode<IPointer<SharedArrayBuffer>>();
typia.protobuf.createDecode<IPointer<WeakSet<IPointer<number>>>>();
typia.protobuf.createDecode<IPointer<WeakMap<IPointer<number>, string>>>();

// ENCODE
typia.protobuf.createEncode<IPointer<Date>>();
typia.protobuf.createEncode<IPointer<Boolean>>();
typia.protobuf.createEncode<IPointer<BigInt>>();
typia.protobuf.createEncode<IPointer<Number>>();
typia.protobuf.createEncode<IPointer<String>>();
typia.protobuf.createEncode<IPointer<Uint8ClampedArray>>();
typia.protobuf.createEncode<IPointer<Uint16Array>>();
typia.protobuf.createEncode<IPointer<Uint32Array>>();
typia.protobuf.createEncode<IPointer<BigUint64Array>>();
typia.protobuf.createEncode<IPointer<Int8Array>>();
typia.protobuf.createEncode<IPointer<Int16Array>>();
typia.protobuf.createEncode<IPointer<Int32Array>>();
typia.protobuf.createEncode<IPointer<BigInt64Array>>();
typia.protobuf.createEncode<IPointer<Float32Array>>();
typia.protobuf.createEncode<IPointer<Float64Array>>();
typia.protobuf.createEncode<IPointer<Float32Array>>();
typia.protobuf.createEncode<IPointer<Float64Array>>();
typia.protobuf.createEncode<IPointer<DataView>>();
typia.protobuf.createEncode<IPointer<ArrayBuffer>>();
typia.protobuf.createEncode<IPointer<SharedArrayBuffer>>();
typia.protobuf.createEncode<IPointer<WeakSet<IPointer<number>>>>();
typia.protobuf.createEncode<IPointer<WeakMap<IPointer<number>, string>>>();
